# Mari

./: .gitattributes  .gitignore  CMakeLists.txt  Config.json  README.md  build  build.sh  main.cpp  requirements.sh  setup  setup.sh  sync  sync.sh  video.avi
.qi/: path.conf  worktree.xml
Core/: InitManager.cpp  Module.cpp  Module.cpp.bkp  Module.h  Module.h.bkp  ModulesManager.cpp  ModulesManager.h  ModulesManager.h.bkp
Core/Utils/: SimpleTimer.h
Modules/Ball/: BallDetector.cpp  BallDetector.h
Modules/Motion/: MotionModule.cpp  MotionModule.h  rUNSWiftMotionAdapter.cpp  rUNSWiftMotionAdapter.h
Modules/Perception/: rUNSWiftPerceptionAdapter.h
Modules/Remote/: Joystick.cpp  RemoteModule.cpp
RinobotSPLSimulator/: RinobotSPLSimulator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpserver.cpp  tcpserver.cpp.fdatST  tcpserver.h
data/pos/: FRONT.pos
data/pos/individualPoses/: bb8_getupFrontFast.pos  ditto_getupBack.pos  (+2 more)
root/etc/: sudoers
src/: CMakeLists.txt  main.cpp  qiproject.xml
src/Core/: InitManager.cpp  InitManager.h  Module.cpp  Module.h  ModulesManager.cpp  ModulesManager.cpp.bkp  ModulesManager.h  SpellBook.cpp  SpellBook.h  rUNSWiftAdapter.h
src/Core/GC/: RoboCupGameControlData.h
src/Core/Utils/: CameraFrame.cpp  CameraFrame.h  CameraSettingMessage.cpp  CameraSettingMessage.h  Circle.h  Colors.h  CombinedCamera.cpp  CombinedCamera.hpp  FrameWriter.cpp  FrameWriter.h  ImageMessage.cpp  ImageMessage.h  Message.cpp  Message.h  RelativeCoord.cpp  RelativeCoord.h  RelativeCoords.cpp  RelativeCoords.h  RobotDefs.h  SimpleTimer.cpp  TCPLogger.cpp  TCPLogger.h  set_cloexec.hpp
src/Modules/Ball/: BallDetector.cpp  BallDetector.h
src/Modules/Behaviour/: BehaviourModule.cpp  BehaviourModule.h
src/Modules/Motion/: MotionModule.cpp  MotionModule.h  rUNSWiftMotionAdapter.cpp  rUNSWiftMotionAdapter.h
src/Modules/Network/: NetworkModule.cpp  NetworkModule.h
src/Modules/Perception/: PerceptionModule.cpp  PerceptionModule.h  Vision.cpp  Vision.h  VisionModule.cpp  VisionModule.h  rUNSWiftPerceptionAdapter.cpp  rUNSWiftPerceptionAdapter.h
src/Modules/Perception/Ball/: BallDetector.cpp  BallDetector.h
src/Modules/Perception/Feature/: FeatureExtractor.cpp  FeatureExtractor.h
src/Modules/Perception/Localization/: Localizer.cpp  Localizer.h
src/Modules/Perception/Opponents/: OpponentDetector.cpp  OpponentDetector.h
src/Modules/Perception/RobotDetector/: RobotDetector.cpp  RobotDetector.h
src/Modules/Remote/: Joystick.h  RemoteModule.cpp  RemoteModule.h
src/Modules/Strategy/: StrategyModule.cpp  StrategyModule.h
src/Modules/Strategy/Control/: HeadController.cpp  HeadController.h  PControl.cpp  PControl.h  PotentialFields.cpp  PotentialFields.h
src/Modules/Strategy/GameController/: GameController.cpp  GameController.h
src/Modules/Strategy/Roles/: BallHolder.cpp  BallHolder.h  DefenderRole.cpp  DefenderRole.h  GoalieRole.cpp  GoalieRole.h  GoalieRoleCone.cpp  KickerRole.cpp  KickerRole.h  LocalizerRole.cpp  LocalizerRole.h  RinoPlayer.cpp  RinoPlayer.h  Role.cpp  Role.h
src/Modules/Strategy/Safety/: SafetyMonitor.cpp  SafetyMonitor.h
src/Modules/Strategy/Trackers/: BallTracker.cpp  BallTracker.h  FeatureTracker.cpp  FeatureTracker.h  RobotTracker.cpp  RobotTracker.h
supervisor/: README.md
supervisor/supervisorio/: camerasettingmessage.cpp  camerasettingmessage.h  imagemessage.cpp  imagemessage.h  logger.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  robot.h  tcpclient.cpp  tcpclient.h
supervisorio/: camerasettingmessage.cpp  camerasettingmessage.h  imagemessage.cpp  logger.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  robotmanager.cpp  robotmanager.h  supervisorio.pro  tcpclient.cpp  tcpclient.h
(+39 files in other folders)
